fix rev meter off screen on mobile, make buttons bigger

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+button {
+    padding: 20px;
+}
+
 .screen.active {
     display: block;
 }
@@ -38,8 +42,7 @@ body {
 
 .rev-meter {
     position: relative;
-    width: 500px;
-    /* Fixed length for every car */
+    width: 100%;
     height: 40px;
     border: 2px solid black;
     margin: 20px auto;
@@ -56,7 +59,7 @@ body {
 
 .rpm-labels {
     display: flex;
-    width: 500px;
+    width: 100%;
     justify-content: space-between;
     margin: 20px auto;
 }
